force-app/main/default/objects/Room__c/fields/Assigned_Patient__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>PatientRooms</relationshipName>
    <type>Lookup</type>
</CustomField>