force-app/main/default/objects/Room__c/fields/Bed_Status__c.field-meta.xml
<CustomField>
    <fullName>Bed_Status__c</fullName>
    <label>Bed Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bed_Status</valueSetName>
    </valueSet>
</CustomField>